# fmv-demo

./: .dockerignore  .editorconfig  .gitignore  .justfile  .lefthook.yaml  .mise.toml  .pre-commit-config.yaml  .typos.toml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  compose.override.yaml  compose.traefik.yaml  compose.yaml  docker-compose.yaml  eslint.config.js  eslint.config.ts  index.html  justfile  openapi-ts.config.ts  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skills-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
.config/: cspell.json  release.toml  words.txt
.github/: renovate.json
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  cleanup.yml
.opencode/context/project-intelligence/: business-domain.md  business-tech-bridge.md  decisions-log.md  living-notes.md  navigation.md  technical-domain.md
.renovate/: groups.json
backend/: Dockerfile  README.md  mod.just  pyproject.toml
backend/pkg/config/: pyproject.toml
backend/pkg/handlers/: pyproject.toml
backend/pkg/models/: pyproject.toml
backend/pkg/repository/: pyproject.toml
backend/pkg/repository_inmemory/: pyproject.toml
backend/pkg/repository_mongodb/: pyproject.toml
backend/pkg/service/: pyproject.toml
backend/pkg/workers/: pyproject.toml
backend/pkg/workers/src/workers/: __init__.py  task_config.py
backend/src/api/: main.py
backend/src/api/dependencies/: repository.py  service.py
backend/src/api/v1/: router.py
data/: tinyauth.db
frontend/: Dockerfile  cypress.config.ts  eslint.config.ts  mod.just  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  uno.config.ts  vite.config.ts
frontend/locales/: en.yml
frontend/src/: auto-imports.d.ts  components.d.ts  main.ts  route-map.d.ts  shims.d.ts  typed-router.d.ts
frontend/src/client/: api.d.ts
frontend/src/components/: RobotItem.vue  RobotList.vue  TheFooter.vue
frontend/src/composables/: robotList.ts
frontend/src/frontend/: auto-imports.d.ts
frontend/src/layouts/: 404.vue  default.vue
frontend/src/modules/: README.md  i18n.ts  pinia.ts  pwa.ts
frontend/src/pages/: about.md  index.vue
frontend/src/pages/robot/: index.vue  new.vue
frontend/test/e2e/pages/: index.spec.ts
locales/: en.yml
src/: README.md  mod.just
src/api/: main.py  util.py
src/api/auth/: __init__.py  callback.py  config.py
src/api/config/: mongo_settings.py  settings.py
src/api/dependencies/: __init__.py  repository.py  service.py  settings.py
src/api/v1/: api.py  middleware.py  router.py
src/api/v1/auth/: __init__.py  callback.py  config.py  credentials.py  validator.py
src/api/v1/dependencies/: auth.py  repository.py  service.py  settings.py
src/api/v1/endpoints/: auth.py  robot.py  user.py  util.py
src/frontend/: auto-imports.d.ts  components.d.ts  main.ts  shims.d.ts  typed-router.d.ts
src/frontend/client/: client.gen.ts  schemas.gen.ts  sdk.gen.ts  types.gen.ts
src/frontend/client/client/: client.gen.ts  types.gen.ts  utils.gen.ts
src/frontend/client/core/: auth.gen.ts  bodySerializer.gen.ts  params.gen.ts  pathSerializer.gen.ts  serverSentEvents.gen.ts  types.gen.ts  utils.gen.ts
src/frontend/components/: RobotItem.vue  TheFooter.vue  TheInput.vue
src/frontend/composables/: apiRequest.ts  robotList.ts
src/frontend/layouts/: 404.vue  default.vue  home.vue
src/frontend/lib/: index.ts
src/frontend/modules/: apiClient.ts  i18n.ts  nprogress.ts
src/frontend/pages/: README.md  index.vue
src/frontend/pages/hi/: [name].vue
src/frontend/pages/robot/: index.vue
src/frontend/stores/: robot.ts  user.ts
src/pkg/config/: pyproject.toml
src/pkg/config/src/config/: __init__.py  api.py  auth.py  broker.py  cors.py  mongo.py  oauth.py  oidc.py  session.py
src/pkg/handlers/: pyproject.toml
src/pkg/handlers/src/handlers/: __init__.py
src/pkg/handlers/test/handlers/: test_robot_handlers.py
src/pkg/models/: pyproject.toml
src/pkg/models/src/models/: __init__.py  robot.py  robot_collection.py  robot_profile.py  robot_task.py  user.py
src/pkg/repository/: pyproject.toml
src/pkg/repository/src/repository/: __init__.py  robot.py  user.py
src/pkg/repository_inmemory/: pyproject.toml
src/pkg/repository_inmemory/src/repository_inmemory/: __init__.py  robot.py  user.py
src/pkg/repository_mongodb/: pyproject.toml
src/pkg/repository_mongodb/src/repository_mongodb/: __init__.py  models.py  robot.py  user.py  util.py
src/pkg/service/: pyproject.toml
src/pkg/workers/: pyproject.toml
test/api/v1/endpoints/: test_robot_endpoints.py
test/frontend/: component.test.ts
test/v1/endpoints/: test_robot_endpoints.py
ui/: Dockerfile  README.md  components.json  eslint.config.ts  mod.just  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  uno.config.ts  vite.config.ts  wdio.ci.conf.ts  wdio.conf.ts  wdio.dev.conf.ts
ui/locales/: en.yml
ui/src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  route-map.d.ts
ui/src-tauri/: tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src/client/: api.d.ts
ui/src/components/: AppShell.vue  RobotForm.vue  RobotItem.vue  RobotList.vue  RobotListSkeleton.vue  RobotProfile.vue  RobotProfileSkeleton.vue  SiteHeader.vue  TheFooter.vue
ui/src/components/__test__/: RobotItem.test.ts
ui/src/components/auth/: LoginForm.vue
ui/src/components/shell/: AppShell.vue  AppSidebar.vue  NavHeader.vue  NavHome.vue  NavMain.vue  NavUser.vue  index.ts
ui/src/composables/: auth.ts  robotList.ts  robotProfile.ts
ui/src/composables/robot/: create.ts
ui/src/layouts/: 404.vue  centered.vue  default.vue  home.vue
ui/src/lib/: index.ts
ui/src/modules/: guard.ts  i18n.ts  nprogress.ts  pinia.ts  pwa.ts
ui/src/pages/: [...all].vue  callback.vue  error.vue  index.vue  login.vue  logout.vue
ui/src/pages/hi/: [name].vue
ui/src/pages/robot/: [name].vue  index.vue  new.vue
ui/src/stores/: auth.ts  user.ts
ui/test/fixtures/: seed.json
ui/test/pages/: index.page.ts  page.ts
ui/test/specs/: home.e2e.ts
(+39 files in other folders)
