[project]
name = "api"
version = "0.1.0"
description = "Demo project using FastAPI, MongoDB, and Vue"
readme = "README.md"
requires-python = "==3.14.1"
dependencies = [
  "fastapi[standard]==0.123.8",
  "config",
  "models",
  "service",
  "repository",
  "repository_inmemory",
  "repository_mongodb",
]

[dependency-groups]
dev = [
  "mypy==1.19.0",
  "pytest==8.4.2",
  "pytest-mock==3.15.1",
  "ruff==0.14.8"
]

[build-system]
requires = [ "uv_build==0.9.15" ]
build-backend = "uv_build"

[tool.uv.workspace]
members = [ "src/pkg/*" ]

[tool.uv.sources]
config = { workspace = true }
models = { workspace = true }
service = { workspace = true }
repository = { workspace = true }
repository_inmemory = { workspace = true }
repository_mongodb = { workspace = true }

[tool.mypy]
plugins = [ 'pydantic.mypy' ]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.pytest.ini_options]
