[project]
name = "api"
version = "0.1.0"
description = "Demo project using FastAPI, MongoDB, and Vue"
readme = "README.md"
requires-python = "==3.14.4"
dependencies = [
  "fastapi[standard]==0.135.3",
  "config",
  "models",
  "service",
  "handlers",
  "workers",
  "repository",
  "repository_inmemory",
  "repository_mongodb",
  "pyjwt==2.12.1",
  "itsdangerous==2.2.0",
  "cryptography==46.0.7",
]

[dependency-groups]
dev = ["mypy==1.20.1", "pytest==9.0.3", "pytest-mock==3.15.1", "ruff==0.15.9"]

[build-system]
requires = ["uv_build==0.11.6"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["src/pkg/*"]

[tool.uv.sources]
config = { workspace = true }
models = { workspace = true }
service = { workspace = true }
repository = { workspace = true }
repository_inmemory = { workspace = true }
repository_mongodb = { workspace = true }
handlers = { workspace = true }
workers = { workspace = true }

[tool.mypy]
plugins = ['pydantic.mypy']
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.pytest.ini_options]
