[project]
name = "service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [ { name = "Tim", email = "lambchop4prez@users.noreply.github.com" } ]
requires-python = "==3.14.3"
dependencies = []

[build-system]
requires = [ "uv_build==0.10.1" ]
build-backend = "uv_build"
