[project]
name = "workers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tim", email = "lambchop4prez@users.noreply.github.com" }]
requires-python = ">=3.13.7"
dependencies = [
    "celery[librabbitmq,mongodb]>=5.5.3",
    "celery-types>=0.23.0",
    "pymongo>=4.15.3",
]

[project.scripts]
workers = "workers:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
