[project]
name = "repository-inmemory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [ { name = "Tim", email = "lambchop4prez@users.noreply.github.com" } ]
requires-python = "==3.14.0"
dependencies = []

[build-system]
requires = [ "uv_build==0.9.13" ]
build-backend = "uv_build"
