[project]
name = "repository-mongodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [ { name = "Tim", email = "lambchop4prez@users.noreply.github.com" } ]
requires-python = "==3.13.7"
dependencies = [ "pymongo==4.15.1" ]

[build-system]
requires = [ "uv_build==0.8.23" ]
build-backend = "uv_build"
