[project]
name = "repository-mongodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [ { name = "Tim", email = "lambchop4prez@users.noreply.github.com" } ]
requires-python = "==3.14.0"
dependencies = [
  "beanie==2.0.0",
  "pymongo==4.15.4",
]

[build-system]
requires = [ "uv_build==0.9.9" ]
build-backend = "uv_build"
