[project]
name = "repository-mongodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [ { name = "Tim", email = "lambchop4prez@users.noreply.github.com" } ]
requires-python = "==3.14.3"
dependencies = [
  "beanie==2.0.1",
  "pymongo==4.16.0",
]

[build-system]
requires = [ "uv_build==0.10.4" ]
build-backend = "uv_build"
